syntax = "proto3";

message DeleteWorkspaceRequest {
    string workspace_id = 1;
}
