syntax = "proto3";

message UpdateWorkspaceRequest {
    string id = 1;
    string name = 2;
    string desc = 3;
}
